<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    
    
    
   
     <string name="app_namee">DialogFragments</string>
     <string name="logIn">LogIn</string>
     <string name="profile">Profile</string>
     <string name="notes">All Notes</string>
     <string name="note">New Note</string>
     <string name="grid_name">Weekview</string>
     <string name="Details_name">Lessonview</string>
     <string name="ass_name">All Assignments</string>
     <string name="note_name">Notes</string>
    <string name="action_settings">Settings</string>
    <string name="action_more">More</string>
    <string name="user">Profile</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="dialog_message">This is where a sample message could go. We could have just used an AlertDialog perhaps, but we want to show off the ability of setting a custom view while keeping other standard dialog elements. For example, we are using the standard Title and Yes/No buttons typically found in AlertDialog. To make things fun, we\'ll throw in a RatingBar. Try rotating your phone!</string>
    <string name="dialog_title">Feed </string>
    <string name="dialog_positive_text">Yes</string>
    <string name="dialog_positive_toast_message">You clicked Yes!</string>
    <string name="dialog_negative_text">No</string>
    <string name="dialog_negative_toast_message">You clicked No...</string>
    <string name="name">feedback</string>
    <string name="image">Image</string>    
    <string name="c1">#FF3c61c1</string>
    <string name="c2">#222222</string>
    <string name="c3">#2c77c7</string>
    <string name="c4">#ff0000</string>
    <string name="c5">#cccccc</string>
    
    
    <string name="app_name">Ratibar</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="feedBackBtn">What should we improve?</string>
    <string name="menu_grid">Weekview</string>            
    <string name="menu_list">All Notes</string>  
     <string name="menu_refresh">Refresh</string> 
    <string name="menu_share">Share</string>            
    <string name="menu_attachments">Attachments</string>  
    <string name="menu_assignments">All Assignments</string>  
    <string name="course_prompt">Select your Course</string>          
    <string name="year_prompt">Select your Year</string>          
    <string name="intake_prompt">Select your Intake</string>          
    <string name="semester_prompt">Select the Semester</string>    
    <string name="btnSubmitCourse">Continue to Units</string>      
    <string name="unit_list_title">Please unselect unit you do not take</string>      
    
    
    
    
    <string name="action_reload">Reload</string>
    <string name="action_show_player">Show player</string>
    <string name="ok">Ok</string>
    <string name="not_available">N/A</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="mb">Mb</string>
    <string name="play_again">Play again</string>
    <string name="play">Play</string>
    <string name="play_new">Play new!</string>
    <string name="pause">Pause</string>
    <string name="hide">Hide</string>
    <string name="stop">Stop</string>
    <string name="image_card_thumbnail">Card thumbnail</string>
    <string name="image_card_shadow">Card shadow</string>
    <string name="title_section3">Section 3</string>
    <string name="see_more">See more</string>
    
    <string name="backdrop">Backdrop</string>
    
    <!-- No details -->
    <string name="no_details_title">No details</string>
    <string name="no_details_message">This episode does not have any details.</string>
    
    <!-- Low memory error -->
    <string name="closing_low_memory_ticker">Low memory, closing player</string>
    <string name="closing_low_memory_title">Low memory</string>
    <string name="closing_low_memory_text">Phone is low on memory, closing player</string>
    
    <!-- Download error -->
    <string name="download_error_ticker">Error getting podcast data</string>
    <string name="download_error_title">Error</string>
    <string name="download_error_text">Check user/pass. Try again later.</string>
    
    <!-- Download new -->
    <string name="download_new_ticker">Downloading new content</string>
    <string name="download_new_title">New SGU content</string>
    <string name="download_new_text">New SGU content</string>
    
    <!-- Send feedback -->
    <string name="send_feedback_subject">Feedback SGU (Unofficial)</string>
    <string name="send_feedback_message"></string>
    
    <!-- About -->
    <string name="sgu_title">SGU &#8211; An unofficial podcast player</string>
    <string name="sgu_description">The Skeptics\' Guide to the Universe is a weekly Podcast talkshow discussing the latest news and topics from the world of the paranormal, fringe science, and controversial claims from a scientific point of view. -The Skeptics\' Guide to the Universe: Your escape to reality -Produced by the New England Skeptical Society in association with the James Randi Educational Foundation(JREF)</string>
    <string name="version">Version %s</string>
    <string name="made_by">Made by Mike and Petrus</string>
    <string name="made_by_email">mike@slide.se</string>
    <string name="made_by_www">www.slide.se</string>
    
    <!-- Image descriptions -->
    <string name="desc_play_button">Play button</string>
    <string name="desc_show_sections">Show sections</string>
    
    <!-- Section dummy string -->
    <string name="section_number">42</string>
    <string name="section_title">Section dummy title</string>
    <string name="section_start">1:23</string>
    
    <!-- Nothing to play, no content -->
    <string name="no_content_playinfo">Nothing is currently playing. Please select something from the list.</string>
    <string name="no_content_getting_started">&lt;h1&gt;Hello!&lt;/h1&gt; 1. Setup username and password in settings&lt;br /&gt;2. Click the refresh button&lt;br /&gt;3. Done!&lt;br /&gt;&lt;br /&gt;Happy listening!</string>
    <string name="no_content_getting_started_no_html">Hello! Setup username and password in settings, then come back here and click the refresh button. Happy listening!</string>
    <string name="no_content_no_episodes">&lt;h1&gt;It\'s empty...&lt;/h1&gt; If you have setup your username and password and clicked refresh the app will download the list of episodes. This may take a couple of minutes depending on your data connection.&lt;br /&gt;&lt;br /&gt;If you\'re still getting this message go back and make sure your username and password is correct.</string>
    
    <!-- Tabs -->
    <string name="tab_adfree">Ad Free</string>
    <string name="tab_premium">Premium</string>
    
    <string name="tab_details">Details</string>
    <string name="tab_transcript">Transcript</string>
    <string name="tab_links">Links</string>

    <!-- Section headers -->
    <string name="section_header_hosts">Hosts</string>
    <string name="section_header_quote">Skeptical Quote of the Week</string>
    <string name="section_header_science_or_fiction">Science or Fiction</string>
    <string name="section_header_noisy">Who\'s That Noisy</string>
    <string name="section_header_sections">Sections</string>
    <string name="ratibar">Ratibar</string>
   
    <string name="contact_us"> 
    <p>Britesills Tech Ltd.,
    87 Rhapta Road Off Waiyaki Way, Westlands
    Nairobi Kenya</p>

    <p>---{(+254) 720 089 059
    - (+254) 718 121 763}</p>

    <p>---info@ratibar.com
    support@ratibar.com
    jkirwa25@gmail.com</p></string>
   <string name="aboutus">About Us</string>
   <string name="about">Briteskills Tech Ltd offers interactive and modern timetabling solutions to universities and colleges.</string>
    
   <string name="what_we_do"> 
	<B>Ratibar---:</B><BR/>
	
	Ratibar is a modern interactive and automated timetable for college/university admins, teachers and students.

	
	<B>.   .Traffik scheduler---:</B><BR/>
	
	A web-based scheduling solution designed for radio stations to book and report promotion scripts and classifieds.
	
	
	<B>.  .Events scheduler---:</B><BR/>
	
	A scheduling plugin useful for booking and managing custom events. Designed to plugin to your existing ERP.
	


    </string>
    
    
    
    
    
    
    
    
    
</resources>