<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topstories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.br.timetabler.src.WeekviewActivity$GridFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/gridview"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="30dp"
            android:text="Day"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="30dp"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:text="Day"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtMon"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/Mon"
            android:textAppearance="?android:attr/textAppearanceSmall" />

         <TextView
	        android:id="@+id/txtTue"
	        android:layout_width="30dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:text="@string/Tue"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
        
         <TextView
	        android:id="@+id/txtWed"
	        android:layout_width="30dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:text="@string/Wed"
	        android:textAppearance="?android:attr/textAppearanceSmall" /> 
         <TextView
	        android:id="@+id/txtThu"
	        android:layout_width="30dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:text="@string/Thu"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
         <TextView
	        android:id="@+id/txtFri"
	        android:layout_width="30dp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
	        android:text="@string/Fri"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>

    <com.jess.ui.TwoWayGridView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/gridview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/linearLayout1"
        android:background="@color/color_white"
        android:cacheColorHint="@android:color/transparent"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        app:columnWidth="80dp"
        app:gravity="center"
        app:horizontalSpacing="0dp"
        app:numColumns="auto_fit"
        app:numRows="6"
        app:rowHeight="40dp"
        app:scrollDirectionLandscape="horizontal"
        app:scrollDirectionPortrait="horizontal"
        app:stretchMode="none"
        app:verticalSpacing="0dp" />

    <!--
    <?xml version="1.0" encoding="utf-8"?>
	<GridView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/lessonsGridView"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:columnWidth="50dp"
	    android:gravity="center"
	    android:numColumns="auto_fit"
	    android:stretchMode="columnWidth" >
	
	</GridView>
    -->

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/progressBar1"
        android:layout_marginTop="67dp" >
    </TableRow>

</RelativeLayout>